--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
   implementation 'com.android.support:appcompat-v7:26.1.0'
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   implementation 'com.android.support:design:26.1.0'
+  implementation 'com.google.firebase:firebase-database:11.0.4'
   testImplementation 'junit:junit:4.12'
   androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
     exclude group: 'com.android.support', module: 'support-annotations'
@@ -36,4 +37,13 @@ dependencies {
   compile 'com.android.support:palette-v7:26.1.0'
   compile 'com.android.support:support-v4:26.1.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
+
+  // Volley
+  compile 'com.android.volley:volley:1.0.0'
+
+  // Moshi (JSON to Java Object)
+  compile 'com.squareup.moshi:moshi:1.5.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
