--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity
+        android:name=".DetailActivity"
+        android:parentActivityName=".HomeActivity">
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value=".HomeActivity"/>
+    </activity>
   </application>
 
 </manifest>
