--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,19 @@ dependencies {
 
   // Moshi (JSON to Java Object)
   compile 'com.squareup.moshi:moshi:1.5.0'
+  // GSON (JSON to Java Object)
+  compile 'com.google.code.gson:gson:2.8.2'
+
+  // Retrofit
+  compile 'com.squareup.retrofit2:retrofit:2.3.0'
+  // JSON Converter
+  compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+  // Logging interceptor
+  compile 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+
+  // Dagger 2
+  compile 'com.google.dagger:dagger:2.12'
+  annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
 }
 
 
